Fix image paths for production deployment that were not visible on live site

--- a/src/pages/Distribute/HeroSection.css
+++ b/src/pages/Distribute/HeroSection.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 80vh;
-    background: url('src/assets/images/StockCake-Rooftop Evening Gathering_1725860990.jpg') no-repeat center center/cover; /* Background image */
+    background: url('/src/assets/images/StockCake-Rooftop Evening Gathering_1725860990.jpg') no-repeat center center/cover; /* Background image */
     color: rgb(255, 255, 255);
     text-align: center;
     padding: 0 20px;
